--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# プロダクト開発演習  \n",
-    "## テーマ：SRCNNモデルによる超解像  \n",
+    "## テーマ：JPEG圧縮画像の超解像処理モデル開発  \n",
     "### 摘要  \n",
-    "**Pytorchフレームワーク上にて、超解像の実装並びに結果の考察を行う。ニューラルネットワークはSRCNNを用い論文記載の構成とする。広範囲の特徴抽出の有効性を確認するため、特徴抽出層にカーネルを追加したモデル(SRCNN-c11)を定義し、SRCNNとPSNR(dB)を比較する。[General100](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)データセットを用いた学習並びに、ホールドアウト法によるPSNR(dB)にて評価する。画像劣化処理としてBICUBICによる拡大縮小並びにJPEG圧縮を適用する。結果(viewres.ipynb)として、カーネル追加による精度改善は見られなかった。またセピア調劣化方式での画像劣化に対する追試を行い(testview.ipynb)、自己教師あり学習の課題について考察した。**  \n",
+    "**JPEG圧縮画像の超解像モデルを実装し超解像処理結果の確認と考察を行う。ニューラルネットワークモデルはSRCNNとし、Pytorchフレームワーク上に参照論文記載の構成を実装した。まず初めに、BICUBIC拡大縮小画像を学習対象として、SRCNNの基本性能を確認した。次に、BICUBIC拡大縮小に加えて、OoenCVによるJPEG圧縮処理した画像を学習対象として、SRCNNでの対応可能性を確認した。[General100](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)データセットを用いた学習並びに、ホールドアウト法によるPSNR(dB)にて評価を行った。結果(viewres.ipynb)として、カーネル追加による精度改善は見られなかった。自己教師あり学習の課題について考察した。**  \n",
     "\n",
     "**train.ipynb処理概要**  \n",
     "  1. 環境定義  \n",
@@ -72,7 +72,7 @@
     "#       args.append(\"--comp\")\n",
     "#       args.append(\"--naive\")\n",
     "#       args.append(\"--c11\")\n",
-    "#       args.append(\"--sym\")\n",
+    "        args.append(\"--sym\")\n",
     "        args.append(\"--con\")\n",
     "#       args.append(\"--q\")\n",
     "#       args.append(\"--epoch\")\n",
@@ -239,10 +239,10 @@
    "source": [
     "class SYM(nn.Module):\n",
     "    def __init__(self):\n",
-    "        super(SRCNN, self).__init__()\n",
+    "        super(SYM, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=64, kernel_size=9, padding=4)\n",
     "        self.conv2 = nn.Conv2d(in_channels=64, out_channels=128, kernel_size=3, padding=1)\n",
-    "        self.conv3 = nn.Conv2d(in_channels=128, out_channels=64, kernel_size=1, padding=1)\n",
+    "        self.conv3 = nn.Conv2d(in_channels=128, out_channels=64, kernel_size=1, padding=0)\n",
     "        self.conv4 = nn.Conv2d(in_channels=64, out_channels=3, kernel_size=5, padding=2)\n",
     "\n",
     "        for m in self.modules():\n",
@@ -284,14 +284,14 @@
    "outputs": [],
    "source": [
     "if __name__=='__main__':\n",
-    "    try:\n",
-    "        if opt.c11:\n",
-    "            model = SRCNN11()\n",
-    "        elif opt.sym:\n",
-    "            model = SYM()\n",
-    "        else:\n",
-    "            model = SRCNN()\n",
-    "    except:\n",
+    "    if opt.c11:\n",
+    "        print('load model: SRCNN11')\n",
+    "        model = SRCNN11()\n",
+    "    elif opt.sym:\n",
+    "        print('load model: SYM')\n",
+    "        model = SYM()\n",
+    "    else:\n",
+    "        print('load model: SRCNN')\n",
     "        model = SRCNN()\n",
     "\n",
     "    criterion = MSELoss()\n",
