--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -5,15 +5,18 @@
    "metadata": {},
    "source": [
     "# プロダクト開発演習  \n",
-    "## テーマ：JPEG圧縮画像の超解像処理モデル開発  \n",
+    "## テーマ：JPEG圧縮画像の超解像モデル開発  \n",
     "### 摘要  \n",
-    "**JPEG圧縮画像の超解像モデルを実装し超解像処理結果の確認と考察を行う。ニューラルネットワークモデルはSRCNNとし、Pytorchフレームワーク上に参照論文記載の構成を実装した。まず初めに、BICUBIC拡大縮小画像を学習対象として、SRCNNの基本性能を確認した。次に、BICUBIC拡大縮小に加えて、OoenCVによるJPEG圧縮処理した画像を学習対象として、SRCNNでの対応可能性を確認した。[General100](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)データセットを用いた学習並びに、ホールドアウト法によるPSNR(dB)にて評価を行った。結果(viewres.ipynb)として、カーネル追加による精度改善は見られなかった。自己教師あり学習の課題について考察した。**  \n",
+    "**JPEG圧縮画像の超解像モデルを実装し超解像処理結果の確認と考察を行う。ニューラルネットワークモデルはSRCNNとし、Pytorchフレームワーク上に参照論文記載の構成を実装した。まず初めに、BICUBIC拡大縮小画像を学習対象として、SRCNNの基本性能を確認した。次に、BICUBIC拡大縮小に加えて、OoenCVによるJPEG圧縮処理した画像を学習対象として、複数のモデルを提案し、その性能を評価した。データセットとして、[General100](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)データセットを用い、学習並びにホールドアウト法によるPSNR(dB)にて評価を行った。最後に、結果(viewres.ipynb)検討から提案モデルの優劣を考察した。**  \n",
     "\n",
-    "**train.ipynb処理概要**  \n",
+    "**学習処理(train.ipynb)概要（本jupyter-notebook）**  \n",
     "  1. 環境定義  \n",
-    "  2. データローディングと拡張\n",
+    "  2. データローディングとデータ拡張、画像劣化処理\n",
     "  3. モデル定義とインスタンス  \n",
     "  4. 学習ループ  \n",
+    "\n",
+    "**学習結果表示処理(viewres.ipynb)概要**  \n",
+    "**テストデータ評価(testview.ipynb)概要**  \n",
     "\n",
     "### ニューラルネットワークモデル(train.ipynb)  \n",
     "**SRCNN**    \n",
@@ -23,14 +26,16 @@
     "### 学習データ及びデータ拡張  \n",
     "**[General100 Dataset](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)を学習データとして用いる  \n",
     "100画像を学習用途80、バリデーション用途、テスト用途に各10画像に分け学習を行うが、データセットのダウンロード、展開、dataディレクトリへの分割については[付録参照](#学習データ)**  \n",
-    "**Flip, Mirror, Rotateを適用**  \n",
-    "**画像劣化手法：BICUBLIC**  \n",
-    "**拡張あり無しでのPSNR(dB)比較（Holdout法）**  \n",
+    "**データ拡張：PILのFlip, Mirror, Rotateを実装**  \n",
+    "**画像劣化手法：PILのBICUBLIC拡大縮小並びにOpenCVによるJPEG圧縮処理を実装**  \n",
     "\n",
-    "### ニューラルネットワークモデルの調整(train.ipynb)  \n",
-    "**論文中の特徴抽出層のカーネルサイズ9x9に11x11などの特徴抽出層を追加**  \n",
+    "### 提案モデル(train.ipynb)  \n",
+    "**参照論文中の超解像モデル：SRCNN**  \n",
+    "**特徴抽出層のカーネルサイズ9x9に11x11の特徴抽出層を追加：SRCNN11**  \n",
     "演算量は同等のまま特徴抽出方法を変更  \n",
-    "モデル調整後のPSNR(dB)評価  \n",
+    "広範囲の特徴を加味した推論を可能とする  \n",
+    "**5層モデル：SYM**  \n",
+    "SRCNNに残差機構を追加し、低層の情報を上位層へ直接伝えると共に、勾配消失を回避  \n",
     "\n",
     "### 学習結果(viewres.ipynb)\n",
     "**PSNRの推移グラフ：学習結果(dB推移)をnpyで保存し、別ipynb(viewres.ipynb)で表示**  \n",
@@ -132,6 +137,7 @@
     "from torchvision import transforms\n",
     "from torchvision.transforms import ToTensor, RandomCrop\n",
     "from PIL import Image, ImageOps\n",
+    "import cv2\n",
     "from pathlib import Path\n",
     "import random\n",
     "from pdb import set_trace"
@@ -182,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SRCNNモデル改(SRCNN-c11)  \n",
+    "## 11x11カーネルを持つSRCNN(SRCNN-c11)  \n",
     "原論文では、カーネルサイズ９x９の特徴抽出層が第１層に当たる  \n",
     "これにカーネルサイズ１１x１１の層を追加し広範囲の特徴抽出を行う  "
    ]
@@ -228,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SRCNNモデル改(SYM)  "
+    "## 4層モデル(SYM)  "
    ]
   },
   {
@@ -299,8 +305,7 @@
     "        model = model.cuda()\n",
     "        criterion = criterion.cuda()\n",
     "\n",
-    "    optimizer = optim.Adam( model.parameters(), lr=1e-4 )\n",
-    "#    optimizer = optim.Adam( model.params, lr=1e-4 )"
+    "    optimizer = optim.Adam( model.parameters(), lr=1e-4 )"
    ]
   },
   {
@@ -328,7 +333,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
     "def compress(img, Quality=10):\n",
     "    img = np.array(img)\n",
     "    encode_param = [int(cv2.IMWRITE_JPEG_QUALITY), Quality]\n",
