--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -7,7 +7,7 @@
     "# プロダクト開発演習  \n",
     "## テーマ：JPEG圧縮画像の超解像モデル開発  \n",
     "### 摘要  \n",
-    "**JPEG圧縮画像の超解像モデルを実装し超解像処理結果の確認と考察を行う。ニューラルネットワークモデルはSRCNNとし、Pytorchフレームワーク上に参照論文記載の構成を実装した。まず初めに、BICUBIC拡大縮小画像を学習対象として、SRCNNの基本性能を確認した。次に、BICUBIC拡大縮小に加えて、OoenCVによるJPEG圧縮処理した画像を学習対象として、複数のモデルを提案し、その性能を評価した。データセットとして、[General100](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)データセットを用い、学習並びにホールドアウト法によるPSNR(dB)にて評価を行った。最後に、結果(viewres.ipynb)検討から提案モデルの優劣を考察した。**  \n",
+    "**JPEG圧縮画像の超解像モデルを実装し超解像処理結果の確認と考察を行う。ニューラルネットワークモデルはSRCNNとし、Pytorchフレームワーク上に参照論文記載の構成を実装した。まず初めに、BICUBIC拡大縮小画像を学習対象として、SRCNNの基本性能を確認した。次に、BICUBIC拡大縮小に加えて、OoenCVによるJPEG圧縮処理した画像を学習対象として、複数のモデルを提案し、その性能を評価した。データセットとして、[General100](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)データセットを用い、学習並びにホールドアウト法によるPSNR(dB)にて評価を行った。最後に、テスト結果(testview.ipynb)検討から提案モデルの優劣を考察した。**  \n",
     "\n",
     "**学習処理(train.ipynb)概要（本jupyter-notebook）**  \n",
     "  1. 環境定義  \n",
@@ -15,22 +15,23 @@
     "  3. モデル定義とインスタンス  \n",
     "  4. 学習ループ  \n",
     "\n",
-    "**学習結果表示処理(viewres.ipynb)概要**  \n",
-    "**テストデータ評価(testview.ipynb)概要**  \n",
+    "**学習結果表示処理(viewres.ipynb)**  \n",
+    "学習過程のPSNRとLossグラフ化  \n",
     "\n",
-    "### ニューラルネットワークモデル(train.ipynb)  \n",
+    "**テストデータ評価(testview.ipynb)**  \n",
+    "テスト用画像を用いた各モデルの評価とPSNRまとめ\n",
+    "\n",
+    "### 参照論文モデル(train.ipynb)  \n",
     "**SRCNN**    \n",
-    "\"Chao Dong, Chen Change Loy, Kaiming He, Xiaoou Tang. Learning a Deep Convolutional Network for Image Super-Resolution, in Proceedings of European Conference on Computer Vision (ECCV), 2014\"  \n",
-    "**自己教師あり学習**  \n",
+    "参照論文:\"Chao Dong, Chen Change Loy, Kaiming He, Xiaoou Tang. Learning a Deep Convolutional Network for Image Super-Resolution, in Proceedings of European Conference on Computer Vision (ECCV), 2014\"  \n",
     "\n",
     "### 学習データ及びデータ拡張  \n",
-    "**[General100 Dataset](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)を学習データとして用いる  \n",
-    "100画像を学習用途80、バリデーション用途、テスト用途に各10画像に分け学習を行うが、データセットのダウンロード、展開、dataディレクトリへの分割については[付録参照](#学習データ)**  \n",
+    "[General100 Dataset](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)を学習データとして用いる  \n",
+    "100画像を学習用途80、バリデーション用途、テスト用途に各10画像に分け学習を行うが、データセットのダウンロード、展開、dataディレクトリへの分割については[付録参照](#学習データ)  \n",
     "**データ拡張：PILのFlip, Mirror, Rotateを実装**  \n",
     "**画像劣化手法：PILのBICUBLIC拡大縮小並びにOpenCVによるJPEG圧縮処理を実装**  \n",
     "\n",
     "### 提案モデル(train.ipynb)  \n",
-    "**参照論文中の超解像モデル：SRCNN**  \n",
     "**特徴抽出層のカーネルサイズ9x9に11x11の特徴抽出層を追加：SRCNN11**  \n",
     "演算量は同等のまま特徴抽出方法を変更  \n",
     "広範囲の特徴を加味した推論を可能とする  \n",
@@ -518,7 +519,23 @@
     "**付録**  \n",
     "学習データは、提供サイトよりダウンロード、圧縮展開後、以下の３つのディレクトリへ分けて置く  \n",
     "data/General-100/train data/General-100/val data/General-100/test  \n",
-    "学習データ80画像、バリデーション10画像、テスト10画像をランダムに選択    "
+    "学習データ80画像、バリデーション10画像、テスト10画像をランダムに選択  \n",
+    "\n",
+    "**提出物**  \n",
+    "train.ipynb  \n",
+    "viewres.ipynb  \n",
+    "testview.ipynb  \n",
+    "result/SRCNN/latest_weight.pth  \n",
+    "result/SRCNN-naive/latest_weight.pth  \n",
+    "result-comp10/SRCNN/latest_weight.pth  \n",
+    "result-comp10/SRCNN-c11/latest_weight.pth  \n",
+    "result-comp10/SRCNN-sym/latest_weight.pth  \n",
+    "result/SRCNN/dBhistory.npy  \n",
+    "result/SRCNN-naive/dBhistory.npy  \n",
+    "result-comp10/SRCNN/dBhistory.npy  \n",
+    "result-comp10/SRCNN-c11/dBhistory.npy  \n",
+    "result-comp10/SRCNN-sym/dBhistory.npy  \n",
+    "data/General-100/test/im_\\*.bmp    "
    ]
   }
  ],
