--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -7,7 +7,7 @@
     "# プロダクト開発演習  \n",
     "## テーマ：JPEG圧縮画像の超解像モデル開発  \n",
     "### 摘要  \n",
-    "**JPEG圧縮画像の超解像モデルを実装し超解像処理結果の確認と考察を行う。ニューラルネットワークモデルはSRCNNとし、Pytorchフレームワーク上に参照論文記載の構成を実装した。まず初めに、BICUBIC拡大縮小画像を学習対象として、SRCNNの基本性能を確認した。次に、BICUBIC拡大縮小に加えて、OoenCVによるJPEG圧縮処理した画像を学習対象として、複数のモデルを提案し、その性能を評価した。データセットとして、[General100](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)データセットを用い、学習並びにホールドアウト法によるPSNR(dB)にて評価を行った。最後に、テスト結果(testview.ipynb)検討から提案モデルの優劣を考察した。**  \n",
+    "**画像の保存領域削減のため縮小かつJPEG圧縮された画像を補完して美しく参照するため、JPEG圧縮画像の超解像モデルを開発する。JPEG圧縮画像の超解像モデルを実装し超解像処理結果の確認と考察を行う。基本とするニューラルネットワークモデルはSRCNNとし、Pytorchフレームワーク上に参照論文記載の構成を実装した。まず初めに、BICUBIC拡大縮小画像を学習対象として、SRCNNの基本性能を確認した。次に、BICUBIC拡大縮小に加えて、OoenCVによるJPEG圧縮処理した画像を学習対象として、複数のモデルを提案し、その性能を評価した。データセットとして、[General100](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)データセットを用い学習並びにホールドアウト法によるPSNR(dB)にて評価を行った。最後に、テスト結果(testview.ipynb)検討から提案モデルの優劣を考察した。**  \n",
     "\n",
     "**学習処理(train.ipynb)概要（本jupyter-notebook）**  \n",
     "  1. 環境定義  \n",
