--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -82,7 +82,7 @@
     "        args.append(\"--con\")\n",
     "#       args.append(\"--q\")\n",
     "#       args.append(\"--epoch\")\n",
-    "        args.extend([\"--snap\",\"5\"])\n",
+    "#       args.extend([\"--snap\",\"5\"])\n",
     "#       args.append(\"--q\",\"8\")\n",
     "        opt = parser.parse_args(args=args)\n",
     "    else:\n",
@@ -235,7 +235,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4層モデル(SYM)  "
+    "## 5層モデル(SYM)  \n",
+    "SRCNNに残差機構を追加し、低層の情報を上位層へ直接伝えると共に、勾配消失を回避:SYMモデル  "
    ]
   },
   {
